src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Zendesk__Default</fullName>
        <isActive>true</isActive>
    </businessProcesses>
    <fields>
        <fullName>Account_Billing_City__c</fullName>
        <formula>IF(NOT(ISBLANK(Account__r.BillingCity)),Account__r.BillingCity,&quot;&quot;)</formula>
        <label>Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Level__c</fullName>
        <formula>TEXT(Account__r.Account_Level__c)</formula>
        <label>Account Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_MSA__c</fullName>
        <formula>Account__r.Metropolitan_Statistical_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account MSA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Opps_Commit_PO_Received__c</fullName>
        <formula>Account__r.Opportunities_Commit_PO_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Opps (Commit,PO Received)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Ops_IT_Budget__c</fullName>
        <formula>Account__r.Ops_IT_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Ops IT Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner_User_Safe_ID__c</fullName>
        <formula>Account__r.Account_Owner_User_Safe_ID__c</formula>
        <label>Account Owner User Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner_Name__c</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>Account Phone Number</description>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_RainKing_ID__c</fullName>
        <formula>Account__r.RainKing_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RainKing ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Rating__c</fullName>
        <formula>TEXT(Account__r.Rating)</formula>
        <label>Account Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Reason_for_Flag__c</fullName>
        <formula>Account__r.Reason_for_Flag__c</formula>
        <label>Account Reason for Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Account__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Round_Robin__c</fullName>
        <formula>Account__r.Account_Round_Robin__c</formula>
        <label>Account Round Robin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Safe_ID__c</fullName>
        <formula>Account__r.Account_Safe_ID__c</formula>
        <label>Account Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Socket_Count__c</fullName>
        <formula>Account__r.Socket_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Socket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>IF(Account__c=&quot;&quot;,&quot;Need to Attach to Account&quot;,Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account__r.Type)</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Website__c</fullName>
        <formula>Account__r.Website</formula>
        <label>Account Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Lead_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Lead (Manual)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Active Leads</relationshipLabel>
        <relationshipName>Active_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addt_l_Third_Party_Asset_Download_Name__c</fullName>
        <description>for Corey 3PT</description>
        <label>Addt&apos;l Third Party Asset Download Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <formula>Today() - Datevalue(CreatedDate)</formula>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Days_since_WFF__c</fullName>
        <formula>Today() - Datevalue(Latest_Web_Form_Fill_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days since WFF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Phone__c</fullName>
        <label>Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Assistant_s_Name__c</fullName>
        <inlineHelpText>Add the name of the person&apos;s assistant, secretary, gatekeeper, etc.</inlineHelpText>
        <label>Assistant&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Lead_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Lead_Full_Name__c</fullName>
        <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_lead_source_for_merge__c</fullName>
        <formula>IF(OR(FIND(&quot;Acquirelists&quot;,TEXT(LeadSource))&gt;0,
FIND(&quot;isell&quot;,LOWER(TEXT(LeadSource)))&gt;0,
FIND(&quot;red base&quot;,LOWER(TEXT(LeadSource)))&gt;0),
&quot;Bad&quot;,&quot;Good&quot;)</formula>
        <label>Bad lead source (for merge)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blog_Site__c</fullName>
        <label>Blog Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Blogger_Day_Job__c</fullName>
        <label>Blogger Day Job</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blogger_Type__c</fullName>
        <label>Blogger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blog Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <description>Values come from VHM form</description>
        <label>Business Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overprovisioned Infrastructure and Inefficiency</fullName>
                </value>
                <value>
                    <fullName>Growth in Environment Complexity</fullName>
                </value>
                <value>
                    <fullName>Service Degradation/Downtime</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting/Proactive Monitoring</fullName>
                </value>
                <value>
                    <fullName>Administrative Costs (High Admin:Workload Ratio)</fullName>
                </value>
                <value>
                    <fullName>Properly Utilizing Automation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFCR_FCCRM_Threshold__c</fullName>
        <description>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</description>
        <formula>/*the value in this field is compared against the configured Full Circle CRM engagement score*/
/*modify this formula as your company&apos;s engagement threshold changes*/
100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</inlineHelpText>
        <label>FCCRM Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Response__c</fullName>
        <description>Indicates if you need to add a sales campaign to work this lead or create an opportunity</description>
        <formula>/*VIEW STATIC RESOURCES AND UPDATE LINKS*/
IF (
OR( /*inactive status values */
ISPICKVAL( Status , &quot;Suspect&quot;),
ISPICKVAL( Status , &quot;Customer&quot;),
ISPICKVAL( Status , &quot;Closed&quot;)),
IMAGE(&quot;/resource/1443845578000/fccrm_Add_Campaign_Image&quot;,&quot;Add a Campaign&quot;,16,180),
IMAGE(&quot;/resource/1443845578000/fccrm_Has_Campaign_Image&quot;,&quot;Has Campaign&quot;,16,180))</formula>
        <inlineHelpText>Indicates if you need to add a sales campaign to work this lead or create an opportunity</inlineHelpText>
        <label>Response:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Status_Age__c</fullName>
        <description>Number of days since status was set. 0 is same day, blank indicates there is no value in the status last set field.</description>
        <formula>Today() - DATEVALUE(CFCR_Status_Last_Set__c)</formula>
        <inlineHelpText>Number of days since status was set. 0 is same day, blank indicates there is no value in the status last set field.</inlineHelpText>
        <label>Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Status_Last_Set__c</fullName>
        <description>Most recent update of the Lead Status field. Set with Workflow.</description>
        <inlineHelpText>Most recent update of the Lead Status field.</inlineHelpText>
        <label>Status Last Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CFCR_Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Environment under 8 hosts</fullName>
                </value>
                <value>
                    <fullName>Existing open opportunity</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>No Longer at Company</fullName>
                </value>
                <value>
                    <fullName>Not a Stakeholder</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact - Bad Data</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact - Language Barrier</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact - Non Responsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COMPANY_MATCH__c</fullName>
        <formula>IF(Company&lt;&gt;Account__r.Name,&quot;No match&quot;,&quot;-&quot;)</formula>
        <label>COMPANY MATCH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Call Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callback_Date__c</fullName>
        <label>Callback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_ID_Marketo__c</fullName>
        <description>Campaign ID to be stamped by Marketo on insert for DupeBlocker workaround</description>
        <label>Campaign ID (Marketo)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clean_company__c</fullName>
        <description>For account creation (limits the amount of account merging needed).  Formula must match similar formula on account record.</description>
        <formula>IF(OR(Company=&quot;-&quot;,Company=&quot;.&quot;,Company=&quot;,&quot;,Company=&quot;&apos;&quot;,Company=&quot;/&quot;),&quot;(Unknown)&quot;,
TRIM(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
LOWER(&quot; &quot;&amp;Company&amp;&quot; &quot;),&quot;-&quot;,&quot;&quot;),
&quot;.&quot;,&quot;&quot;),
&quot;,&quot;,&quot;&quot;),
&quot;&apos;&quot;,&quot;&quot;),
&quot; co &quot;,&quot;&quot;),
&quot; company &quot;,&quot;&quot;),
&quot; inc &quot;,&quot;&quot;),
&quot; incorporated &quot;,&quot;&quot;),
&quot; ltd &quot;,&quot;&quot;),
&quot; limited &quot;,&quot;&quot;),
&quot; llc &quot;,&quot;&quot;),
&quot; corporation &quot;,&quot;&quot;),
&quot; corp &quot;,&quot;&quot;),
&quot; plc &quot;,&quot;&quot;),
&quot; llp &quot;,&quot;&quot;),
&quot; the &quot;,&quot;&quot;),
&quot; dept of &quot;,&quot;&quot;),
&quot;&amp;&quot;,&quot;and&quot;),
&quot;+&quot;,&quot;and&quot;),
&quot;saint&quot;,&quot;st&quot;)))</formula>
        <label>Clean company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierge_Inbound_Request__c</fullName>
        <label>Concierge Inbound Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested Capacity Planner</fullName>
                </value>
                <value>
                    <fullName>Requested Contact</fullName>
                </value>
                <value>
                    <fullName>Requested Demo</fullName>
                </value>
                <value>
                    <fullName>Requested Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concierge_Routing_Reason__c</fullName>
        <label>Concierge Routing Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Downloaded 30 Day</fullName>
                </value>
                <value>
                    <fullName>Downloaded Ops Man Lite</fullName>
                </value>
                <value>
                    <fullName>Downloaded VHM</fullName>
                </value>
                <value>
                    <fullName>Requested Capacity Planner</fullName>
                </value>
                <value>
                    <fullName>Requested Contact</fullName>
                </value>
                <value>
                    <fullName>Requested Demo</fullName>
                </value>
                <value>
                    <fullName>Requested Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Stakeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConvertedDatePlus1__c</fullName>
        <formula>ConvertedDate + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConvertedDatePlus1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_Immediately__c</fullName>
        <description>Is checked if the lead was converted to a contact before being called, meaning it was duplicative with an existing contact.</description>
        <formula>AND( Dial_Count__c = 0, IsConverted )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Immediately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_per_Terabyte__c</fullName>
        <label>Cost per Terabyte</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country_for_Assignment_Rules__c</fullName>
        <description>Returns lead&apos;s Country by default. If Country is blank, then returns Inferred Country.</description>
        <formula>IF(ISBLANK( Country ),  mkto71_Inferred_Country__c , Country)</formula>
        <label>Country for Assignment Rules</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateDate_MTD__c</fullName>
        <description>True if created date of lead is within current month-to-date window</description>
        <formula>DAY(DATEVALUE(CreatedDate)) &lt;= DAY(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if created date of lead is within current month-to-date window</inlineHelpText>
        <label>Created Date Month To Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Team__c</fullName>
        <formula>TEXT(CreatedBy.Team__c)</formula>
        <label>Created By Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Text__c</fullName>
        <formula>CreatedBy.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Week__c</fullName>
        <formula>DATEVALUE(CreatedDate)-MOD(DATEVALUE(CreatedDate)-DATE(1900,1,7),7)</formula>
        <label>Created Date Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Day_of_Week__c</fullName>
        <formula>CASE( 
MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 
0, &quot;(a)Sunday&quot;, 
1, &quot;(b)Monday&quot;, 
2, &quot;(c)Tuesday&quot;, 
3, &quot;(d)Wednesday&quot;, 
4, &quot;(e)Thursday&quot;, 
5, &quot;(f)Friday&quot;, 
6, &quot;(g)Saturday&quot;, &quot;(h)Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Hour__c</fullName>
        <description>Hour of the day when the lead was created in UTC.</description>
        <formula>(FLOOR((VALUE(LEFT(RIGHT(TEXT( CreatedDate ),9),2)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Hypervisor__c</fullName>
        <description>for Corey 3PT</description>
        <label>Current Hypervisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VMware ESX(i)</fullName>
                </value>
                <value>
                    <fullName>Microsoft Hyper-V</fullName>
                </value>
                <value>
                    <fullName>OpenStack KVM</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Virtualization</fullName>
                </value>
                <value>
                    <fullName>Nutanix Acropolis</fullName>
                </value>
                <value>
                    <fullName>Multiple Hypervisors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_References_Geographical__c</fullName>
        <label>Customer References - Geographical</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_References__c</fullName>
        <label>Customer References</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Address__c</fullName>
        <label>Company HQ Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_City__c</fullName>
        <label>Company HQ City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Country_Code__c</fullName>
        <label>Company HQ Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Country_Full_Name__c</fullName>
        <label>Company HQ Country (Full Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Postal_Code__c</fullName>
        <label>Company HQ Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_State_Full_Name__c</fullName>
        <label>Company HQ State (Full Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_State__c</fullName>
        <label>Company HQ State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Conflict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conflict</label>
        <referenceTo>DSCORGPKG__Conflict__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DO_3yr_Employees_Growth__c</fullName>
        <label>3yr Employees Growth %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DO_3yr_Sales_Growth__c</fullName>
        <label>3yr Sales Growth %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DeletedFromDiscoverOrg__c</fullName>
        <label>DeletedFromDiscoverOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>false</label>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Company_ID__c</fullName>
        <label>DiscoverOrg Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Created_On__c</fullName>
        <label>Created by DiscoverOrg</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_First_Update__c</fullName>
        <label>DiscoverOrg First Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_FullCountryName__c</fullName>
        <label>DiscoverOrg Country Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
        <label>DiscoverOrg ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_LastUpdate__c</fullName>
        <label>DiscoverOrg Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_State_Full_Name__c</fullName>
        <label>DiscoverOrg State Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Technologies__c</fullName>
        <label>DiscoverOrg Technologies</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Email_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Exclude_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can use this checkbox to exclude record from getting updated from DiscoverOrg.</description>
        <label>Exclude from DiscoverOrg Auto Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__External_DiscoverOrg_Id__c</fullName>
        <externalId>true</externalId>
        <label>DiscoverOrg Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Fortune_Rank__c</fullName>
        <label>Fortune Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ITOrgChart__c</fullName>
        <formula>IF(ISBLANK(DSCORGPKG__DiscoverOrg_ID__c) = false, 
HYPERLINK( 
&apos;/apex/DSCORGPKG__itorgchart?co_id=&apos;  + DSCORGPKG__DiscoverOrg_Company_ID__c + &apos;&amp;scrollTo=&apos; + DSCORGPKG__DiscoverOrg_ID__c , 
&apos;View&apos;, 
&apos;_new&apos;) , 
&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Org Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__IT_Budget__c</fullName>
        <label>IT Budget (Mil)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__IT_Employees__c</fullName>
        <label>IT Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Job_Function__c</fullName>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Locked_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Management_Level__c</fullName>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NAICS_Codes__c</fullName>
        <label>Primary NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NickName__c</fullName>
        <label>NickName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Ownership__c</fullName>
        <label>Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ReportsTo__c</fullName>
        <label>DiscoverOrg ReportsTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__SIC_Codes__c</fullName>
        <label>Primary SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Twitter_URL__c</fullName>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__department__c</fullName>
        <label>DiscoverOrg Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Workflow_Picklist__c</fullName>
        <label>Daily Workflow Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Setting1</fullName>
                    <default>true</default>
                    <label>Setting1</label>
                </value>
                <value>
                    <fullName>Setting2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Real_Activity__c</fullName>
        <description>Days since the last &apos;real&apos; activity where prospect raised hand or had significant interaction with VMTurbo (e.g., a website visit, email open, connect &amp; conversation).</description>
        <formula>min(today()-datevalue( CreatedDate ), today()-datevalue( mkto_si__Last_Interesting_Moment_Date__c ), today()-datevalue(  Latest_Web_Form_Fill_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Real Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Prospect_status__c</fullName>
        <formula>TODAY()-Prospect_Status_Date_for_aging__c</formula>
        <label>Days in Prospect status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>